--- a/src/components/Technology/Tech.css
+++ b/src/components/Technology/Tech.css
@@ -1,6 +1,6 @@
 .tech {
   display: grid;
-  gap: 5em;
+  gap: 3em;
   grid-template-columns: repeat(2, 1fr);
 }
 .tech .content {
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5em;
+  gap: 3em;
 }
 
 .tech .content h1 {
@@ -24,7 +24,7 @@
 }
 .tech .content h2 {
   font-size: 4em;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.2em;
 }
 .tech .content h3 {
   margin-bottom: 0.5em;
@@ -84,6 +84,10 @@
     font-size: 3em;
   }
 
+  .tech .content h3 {
+    margin-bottom: 0;
+  }
+
   .tech .content p {
     text-align: center;
     font-size: 1.1em;
@@ -99,7 +103,7 @@
   }
 
   .tech .button-wrapper {
-    margin-top: 1em;
+    margin-top: 0.5em;
     flex-direction: row;
   }
 
@@ -107,10 +111,6 @@
     width: 60px;
     height: 60px;
     font-size: 1.2em;
-  }
-
-  .tech .img-wrapper {
-    flex: initial;
   }
 }
 
@@ -140,5 +140,10 @@
   .tech .img-wrapper {
     max-width: 250px;
     min-height: 16em;
+  }
+}
+@media only screen and (max-width: 320px) {
+  .tech .button-wrapper {
+    margin-top: 0;
   }
 }
