--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -14,6 +14,7 @@
   gap: 2em;
   width: 95%;
   margin: auto;
+  padding: 3em 0 1em;
 }
 
 .hero-txt {
@@ -21,7 +22,6 @@
   line-height: 1.8em;
   font-size: 1.4em;
   text-align: justify;
-  margin-top: 1em;
 }
 
 .hero-title {
@@ -136,5 +136,10 @@
 @media only screen and (max-width: 320px) {
   .hero-title h2.bold {
     font-size: 25vw;
+  }
+  .explore a {
+    width: 6rem;
+    height: 6rem;
+    font-size: 1em;
   }
 }
