--- a/src/pages/TechnologyPage/TechPage.css
+++ b/src/pages/TechnologyPage/TechPage.css
@@ -1,3 +1,18 @@
 .techpage:before {
   background-image: url("../../assets/technology/background-technology-desktop.jpg");
 }
+.techpage h1 {
+  margin: 3em 0 1em;
+}
+
+@media only screen and (max-width: 1100px) {
+  .techpage h1 {
+    margin-bottom: 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .techpage h1 {
+    margin-top: 1em;
+  }
+}
